# type_enforced

./: .gitignore  CITATION.cff  Dockerfile  LICENSE  README.md  benchmark.md  prettify.sh  pyproject.toml  requirements.txt  run.sh  run_docker.sh  run_documentation.sh  run_prettify.sh  run_test.sh  run_tests.sh  setup.cfg  setup.py  test.py  test.sh  test_version.sh  update_documentation.sh  update_version.sh  util_test_helper.sh
.claude/: CLAUDE.md  settings.json
.github/workflows/: draft-pdf.yml
doc_template/: module.html.jinja2
docs/: enforcer.html  index.html  search.js  type_enforced.html
docs/0.0.16/: type_enforced.html
docs/1.1.1/: search.js  type_enforced.html
docs/1.10.0/: type_enforced.html
docs/1.10.1/: search.js  type_enforced.html
docs/1.10.2/: search.js  type_enforced.html
docs/1.2.0/: search.js  type_enforced.html
docs/1.3.0/: search.js  type_enforced.html
docs/1.4.0/: search.js  type_enforced.html
docs/1.5.0/: search.js  type_enforced.html
docs/1.6.0/: search.js  type_enforced.html
docs/1.7.0/: search.js  type_enforced.html
docs/1.8.1/: search.js  (+1 more)
paper/: paper.bib  paper.md
test/: benchmark.py  test.py  test_2.py  test_class_01.py  test_class_02.py  test_class_03.py  test_class_04.py  test_class_05.py  test_class_06.py  test_class_07.py  test_class_08.py  test_class_09.py  test_class_1.py  test_class_10.py  test_class_11.py  test_class_12.py  test_class_13.py  test_class_14.py  test_class_15.py  test_class_2.py  test_class_3.py  test_class_4.py  test_class_5.py  test_class_6.py  test_class_7.py  test_class_8.py  test_class_9.py  test_fn_01.py  test_fn_02.py  test_fn_03.py  test_fn_04.py  test_fn_05.py  test_fn_06.py  test_fn_07.py  test_fn_08.py  test_fn_09.py  test_fn_1.py  test_fn_10.py  test_fn_11.py  test_fn_12.py  (+18 more)
type_enforced/: __init__.py  enforcer.py  exception.py  utils.py
utils/: docs.sh  prettify.sh  test.sh
(+63 files in other folders)
